feat: oc-docs playground ui and request execution logic updates

--- a/packages/oc-docs/package.json
+++ b/packages/oc-docs/package.json
@@ -38,7 +38,7 @@
     "server": "node server.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
     "build:lib-bundle": "vite build --config vite.config.libraries-bundle.ts",
-    "prebuild": "npm run build:bundle",
+    "prebuild": "npm run build:lib-bundle",
     "build": "npm run clean && tsc --emitDeclarationOnly && vite build",
     "build:standalone": "npm run clean:standalone && vite build --config vite.config.standalone.ts",
     "build:all": "npm run build && npm run build:standalone",
@@ -55,8 +55,8 @@
     "@emotion/styled": "^11.14.1",
     "@monaco-editor/react": "^4.7.0",
     "@opencollection/types": "0.0.1",
-    "@reduxjs/toolkit": "^2.10.1",
     "@prantlf/jsonlint": "^16.0.0",
+    "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.0.9",
     "@types/js-yaml": "^4.0.9",
     "@types/markdown-it": "^14.1.2",
@@ -72,13 +72,14 @@
     "quickjs-emscripten": "~0.31.0",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-redux": "^9.2.0",
     "react-markdown": "^10.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "remark-gfm": "^4.0.1",
     "strip-json-comments": "^3.1.1"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "~11.13.5",
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.10",
