--- a/packages/oc-schema-explorer/package.json
+++ b/packages/oc-schema-explorer/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
-    "@opencollection/schema": "^0.2.0",
+    "@opencollection/schema": "0.4.0",
     "lucide-react": "^0.539.0",
     "monaco-editor": "^0.47.0",
     "react": "^18.2.0",
