--- a/packages/oc-docs/package.json
+++ b/packages/oc-docs/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@emotion/css": "^11.13.5",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@monaco-editor/react": "^4.7.0",
     "@opencollection/types": "0.2.0",
