chore: add predev script to build library in oc-docs package.json

--- a/packages/oc-docs/package.json
+++ b/packages/oc-docs/package.json
@@ -34,6 +34,7 @@
     "standalone.d.ts"
   ],
   "scripts": {
+    "predev": "npm run build:lib-bundle",
     "dev": "vite",
     "server": "node server.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
